Bug 394272 - Crash in Plasma::RunnerContext::isValid
Summary: Crash in Plasma::RunnerContext::isValid
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.12.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords: drkonqi
: 393189 394304 394320 394527 394697 394919 394989 395099 395114 395120 395134 395524 395587 395597 397615 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-15 09:33 UTC by salvatorebaldino
Modified: 2018-08-20 07:55 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (53.93 KB, text/plain)
2018-06-12 08:38 UTC, CarbonKid
Details

Note You need to log in before you can comment on or make changes to this bug.
Description salvatorebaldino 2018-05-15 09:33:50 UTC
Application: plasmashell (5.12.5)

Qt Version: 5.10.1
Frameworks Version: 5.46.0
Operating System: Linux 4.16.8-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:

The crash happened while I was searching a folder in the search bar that I access by opening the start menu with the button in the bottom left of the screen. It happens rarely, and I cannot reproduce it.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f654209d800 (LWP 872))]

Thread 17 (Thread 0x7f644b5b7700 (LWP 2310)):
#0  0x00007f652f72b61d in pa_pstream_unref () at /usr/lib/pulseaudio/libpulsecommon-11.1.so
#1  0x00007f652f72bb8a in  () at /usr/lib/pulseaudio/libpulsecommon-11.1.so
#2  0x00007f652f72c440 in  () at /usr/lib/pulseaudio/libpulsecommon-11.1.so
#3  0x00007f652ffbcea8 in pa_mainloop_dispatch () at /usr/lib/libpulse.so.0
#4  0x00007f652ffbd280 in pa_mainloop_iterate () at /usr/lib/libpulse.so.0
#5  0x00007f652ffbd301 in pa_mainloop_run () at /usr/lib/libpulse.so.0
#6  0x00007f652ffcb6ae in  () at /usr/lib/libpulse.so.0
#7  0x00007f652f73c81c in  () at /usr/lib/pulseaudio/libpulsecommon-11.1.so
#8  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 16 (Thread 0x7f6455170700 (LWP 2308)):
#0  0x00007f6535e762f4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007f6535e2ea39 in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f44e in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f653eebd319 in  () at /usr/lib/libQt5Qml.so.5
#8  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 15 (Thread 0x7f6455dab700 (LWP 1887)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f653bcdcfec in QSemaphore::acquire(int) () at /usr/lib/libQt5Core.so.5
#3  0x00007f653bf0192a in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#4  0x00007f64748e1080 in  () at /usr/lib/qt/plugins/krunner_placesrunner.so
#5  0x00007f6488d9f038 in Plasma::AbstractRunner::performMatch(Plasma::RunnerContext&) () at /usr/lib/libKF5Runner.so.5
#6  0x00007f648829f828 in ThreadWeaver::Executor::run(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f648829e5f1 in ThreadWeaver::Job::execute(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f648829e12c in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#9  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#10 0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#11 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 14 (Thread 0x7f64565ac700 (LWP 1886)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 13 (Thread 0x7f6456dad700 (LWP 1885)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 12 (Thread 0x7f64575ae700 (LWP 1884)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#9  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#10 0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#11 0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#12 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 11 (Thread 0x7f644699e700 (LWP 1883)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 10 (Thread 0x7f644719f700 (LWP 1882)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 9 (Thread 0x7f642ffff700 (LWP 1881)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7f6447fff700 (LWP 1880)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f653bce4f9c in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007f648829c149 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007f64882a0029 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#9  0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#10 0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#11 0x00007f64882a0082 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#12 0x00007f648829b20d in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#13 0x00007f648829e079 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#14 0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#15 0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#16 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7f64763d8700 (LWP 1020)):
#0  0x00007f653b5dcea9 in poll () at /usr/lib/libc.so.6
#1  0x00007f6535e2f523 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f6478d882ea in KCupsConnection::run() () at /usr/lib/libkcupslib.so
#7  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7f648b7b5700 (LWP 988)):
#0  0x00007f6535e74ecb in  () at /usr/lib/libglib-2.0.so.0
#1  0x00007f6535e2eff8 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f4c6 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f653fa6650b in  () at /usr/lib/libQt5Quick.so.5
#8  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7f65177bf700 (LWP 986)):
#0  0x00007f653ae9bffc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007f6541782f77 in  () at /usr/lib/libQt5Script.so.5
#2  0x00007f6541782fb9 in  () at /usr/lib/libQt5Script.so.5
#3  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7f6521b2e700 (LWP 982)):
#0  0x00007f6535e2c347 in  () at /usr/lib/libglib-2.0.so.0
#1  0x00007f6535e2ee2a in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f4c6 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#7  0x00007f653eebd319 in  () at /usr/lib/libQt5Qml.so.5
#8  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#9  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#10 0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7f65239d5700 (LWP 968)):
#0  0x00007f653b5dcea9 in poll () at /usr/lib/libc.so.6
#1  0x00007f6535e2f523 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f653eebd319 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7f65294ee700 (LWP 924)):
#0  0x00007f6535e2e98c in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#1  0x00007f6535e2f44e in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007f653bf2d254 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007f653bcde71e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007f653c350416 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007f653bce3abd in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f653ae96075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007f653b5e753f in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7f654209d800 (LWP 872)):
[KCrash Handler]
#6  0x00007f653bcdad9d in  () at /usr/lib/libQt5Core.so.5
#7  0x00007f653bcdb50e in  () at /usr/lib/libQt5Core.so.5
#8  0x00007f653bcdc0d5 in QReadWriteLock::tryLockForRead(int) () at /usr/lib/libQt5Core.so.5
#9  0x00007f6488db0762 in Plasma::RunnerContext::isValid() const () at /usr/lib/libKF5Runner.so.5
#10 0x00007f6488db30aa in Plasma::RunnerContext::addMatch(Plasma::QueryMatch const&) () at /usr/lib/libKF5Runner.so.5
#11 0x00007f6488da5d4b in  () at /usr/lib/libKF5Runner.so.5
#12 0x00007f653bf02052 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#13 0x00007f653ced8fec in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#14 0x00007f653cee09c6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#15 0x00007f653bed0ce0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#16 0x00007f653bed3946 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#17 0x00007f653bf2dc44 in  () at /usr/lib/libQt5Core.so.5
#18 0x00007f6535e2f368 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#19 0x00007f6535e2f5b1 in  () at /usr/lib/libglib-2.0.so.0
#20 0x00007f6535e2f63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#21 0x00007f653bf2d231 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#22 0x00007f652e0bd482 in  () at /usr/lib/libQt5XcbQpa.so.5
#23 0x00007f653becf31b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#24 0x00007f653bed8718 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#25 0x0000556bb5525843 in  ()
#26 0x00007f653b51206b in __libc_start_main () at /usr/lib/libc.so.6
#27 0x0000556bb5525bfa in _start ()

Reported using DrKonqi
Comment 1 David Edmundson 2018-05-16 06:54:09 UTC
*** Bug 394304 has been marked as a duplicate of this bug. ***
Comment 2 David Edmundson 2018-05-16 06:54:28 UTC
*** Bug 393189 has been marked as a duplicate of this bug. ***
Comment 3 David Edmundson 2018-05-16 09:22:08 UTC
Git commit 56382f8d9a80796a21d7087ddb660519fbbb5c2e by David Edmundson.
Committed on 16/05/2018 at 09:21.
Pushed by davidedmundson into branch 'master'.

Process DBus replies in the ::match thread

Summary:
6114612970bcf757d9e06a623d6220257ce57b5f turned the DBus requests into
using QDBusPendingCallWatcher but blocking so that it's still handled
within the ::match() method. However, it accidentally processed replies
in the main thread, rather than in the match thread which wasn't the
intention.

Result is occasional threading related crashes.

Test Plan:
Still had results from baloo (one of our DBus runners)
It didn't crash (but it never crashed for me before either)
‎
One tester replied:
[10:00] ‎<‎sunnyflunk‎>‎ d_ed: looks good, tried 30 times with patch and no crash, then turned off the patch and crashed 4th time

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12924

M  +1    -1    src/dbusrunner.cpp

https://commits.kde.org/krunner/56382f8d9a80796a21d7087ddb660519fbbb5c2e
Comment 4 David Edmundson 2018-05-27 22:57:53 UTC
*** Bug 394697 has been marked as a duplicate of this bug. ***
Comment 5 David Edmundson 2018-06-01 11:33:59 UTC
*** Bug 394919 has been marked as a duplicate of this bug. ***
Comment 6 David Edmundson 2018-06-03 21:26:11 UTC
*** Bug 394989 has been marked as a duplicate of this bug. ***
Comment 7 Kai Uwe Broulik 2018-06-07 07:54:27 UTC
*** Bug 395099 has been marked as a duplicate of this bug. ***
Comment 8 Kai Uwe Broulik 2018-06-07 07:56:45 UTC
*** Bug 394527 has been marked as a duplicate of this bug. ***
Comment 9 Kai Uwe Broulik 2018-06-07 07:58:42 UTC
*** Bug 394320 has been marked as a duplicate of this bug. ***
Comment 10 David Edmundson 2018-06-07 17:06:05 UTC
*** Bug 395114 has been marked as a duplicate of this bug. ***
Comment 11 Kai Uwe Broulik 2018-06-08 10:21:31 UTC
*** Bug 395120 has been marked as a duplicate of this bug. ***
Comment 12 Kai Uwe Broulik 2018-06-08 10:21:34 UTC
*** Bug 395134 has been marked as a duplicate of this bug. ***
Comment 13 CarbonKid 2018-06-12 08:38:00 UTC
Created attachment 113223 [details]
New crash information added by DrKonqi

plasmashell (5.12.5) using Qt 5.10.0

- What I was doing when the application crashed:

Launching the Application Menu and starting a research, then plasma shell crash.

I have this crash approximatively 4 times a day.

-- Backtrace (Reduced):
#6  0x00007f5b8b0313d5 in std::__atomic_base<QMutexData*>::compare_exchange_strong (__m2=std::memory_order_acquire, __m1=std::memory_order_acquire, __p2=<optimized out>, __p1=@0x7ffd6045ff30: 0x0, this=0x7f5ac9a79a10 <vtable for Plasma::RunnerManager+40>) at /usr/include/c++/5/bits/atomic_base.h:752
#7  std::atomic<QMutexData*>::compare_exchange_strong (__m2=std::memory_order_acquire, __m1=std::memory_order_acquire, __p2=<optimized out>, __p1=@0x7ffd6045ff30: 0x0, this=0x7f5ac9a79a10 <vtable for Plasma::RunnerManager+40>) at /usr/include/c++/5/atomic:462
#8  QAtomicOps<QMutexData*>::testAndSetAcquire<QMutexData*> (currentValue=0x0, newValue=<optimized out>, expectedValue=0x0, _q_value=...) at ../../include/QtCore/../../src/corelib/arch/qatomic_cxx11.h:290
#9  QBasicAtomicPointer<QMutexData>::testAndSetAcquire (newValue=<optimized out>, expectedValue=0x0, this=0x7f5ac9a79a10 <vtable for Plasma::RunnerManager+40>) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:253
#10 QBasicMutex::fastTryLock (this=0x7f5ac9a79a10 <vtable for Plasma::RunnerManager+40>) at thread/qmutex.h:101
Comment 14 David Edmundson 2018-06-19 00:14:10 UTC
*** Bug 395587 has been marked as a duplicate of this bug. ***
Comment 15 Kai Uwe Broulik 2018-06-27 14:48:43 UTC
*** Bug 395597 has been marked as a duplicate of this bug. ***
Comment 16 Kai Uwe Broulik 2018-06-27 14:48:48 UTC
*** Bug 395524 has been marked as a duplicate of this bug. ***
Comment 17 Kai Uwe Broulik 2018-08-20 07:55:06 UTC
*** Bug 397615 has been marked as a duplicate of this bug. ***